--- a/css/app.css
+++ b/css/app.css
@@ -200,6 +200,8 @@ h1 {
 .menu .nav-tabs {
     /* Menü felső részének stílusa */
     border: 0;
+    justify-content: space-between;
+    padding: 10px 5px;
 }
 
 .menu .nav-link {
@@ -281,6 +283,8 @@ h1 {
     /* Menü elemek stílusa */
     -moz-text-align-last: center;
     text-align-last: center;
+    margin-bottom: 50px;
+
 }
 
 .menu .tab-content .menu-item .menu-img {
@@ -310,6 +314,8 @@ h1 {
     /* Menü elemek árának stílusa */
     font-size: 24px;
     font-weight: 700;
+    margin-bottom: 5px;
+
     color: var(--color-primary);
 }
 
@@ -405,10 +411,6 @@ h1 {
         display: flex;
         flex-direction: column;
 
-        /* @media (max-width: 768px) {
-            min-height: 350px; /* A min. magasság emelése a gomb láthatóságának biztosítása érdekében */
-        } */
-
         &:hover {
             background-color: black;
             color: #000;
@@ -421,7 +423,7 @@ h1 {
         margin-top: 30px;
         display: flex;
         flex-direction: column;
-        justify-content: space-between 10000;
+        justify-content: space-between;
         transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
     }
 
@@ -477,6 +479,9 @@ h1 {
     max-width: 800px;
     z-index: 1000;
     transition: box-shadow 0.3s ease;
+    @media (max-width: 768px) {
+        min-height: 350px; 
+    }
 }
 
 .cart-container h3 {
