--- a/css/app.css
+++ b/css/app.css
@@ -94,7 +94,6 @@
 body {
     /* Az egész oldal alap stílusa */
     padding: 0%;
-    
     font-family: 'Montserrat', sans-serif;
 
 }
@@ -106,6 +105,7 @@ section {
     place-items: center;
     align-content: center;
     min-height: 40vh;
+
 }
 
 .hidden {
@@ -153,6 +153,14 @@ section {
     height: 100vh;
     position: relative;
 }
+.showcase-img {
+    background-size: cover;
+    background-position: center;
+    height: 350px; /* Változtasd meg a megfelelő magasságra */
+  }
+  .showcase-text {
+    text-align: center;
+  }
 
 .video-container {
     /* A videó konténer stílusa */
@@ -372,8 +380,6 @@ h1 {
  
 /* Az "ecogourmet-cards" osztály alá tartozó kártyák stílusa - shop cards. */
 .ecogourmet-cards .card {
-    border: none;
-    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
     overflow: hidden;
     border-radius: 20px;
     min-height: 50vh;
@@ -406,8 +412,6 @@ h1 {
     }
 
     .card-footer .btn {
-        border: 2px solid #fff;
-        color: #000000;
         display: flex;
         flex-direction: column;
 
@@ -441,8 +445,6 @@ h1 {
     }
 
     .card-footer .btn {
-        border: 2px solid #fff;
-        color: #000000;
         display: flex;
         flex-direction: column;
 
