--- a/css/app.css
+++ b/css/app.css
@@ -180,6 +180,25 @@ section {
     /* Itt állíthatod be a kívánt blur értéket (px-ben) */
 }
 
+
+.recipe-card {
+  max-width: 400px;
+  max-height: 400px;
+  margin-bottom: 20px;
+}
+
+.recipe-card img {
+  max-width: 400px;
+  max-height: 400px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5;
+  margin-bottom: 20px;
+
+}
+
+
 .video-containerTwo {
   position: relative;
   overflow: hidden;
