--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Inter:wght@200&family=Montserrat:ital,wght@0,300;1,100&display=swap');
 
 /* -------------Landing Page Animation------------ */
+header {min-height: 60px;}
+footer {min-height: 90px;}
 
-.page-container.home header,
-.slider-text {
-}
 .slider {
 	animation-duration: 20s;
 	animation-timing-function: linear;
