--- a/css/app.css
+++ b/css/app.css
@@ -89,6 +89,97 @@ footer {min-height: 90px;}
 	 75% {visibility: hidden;}
 	100% {}
 }
+/* ------------- Landing Page Animation Ends here ------------ */
+
+
+/* ------------- Video Settings start here ------------ */
+
+
+/* Video rész */
+.home {
+  /* A "home" rész stílusa */
+  height: 100vh;
+  position: relative;
+}
+.showcase-img {
+  background-size: cover;
+  background-position: center;
+  height: 350px; /* Változtasd meg a megfelelő magasságra */
+}
+.showcase-text {
+  text-align: center;
+}
+/* Video - About us oldalon*/
+.video-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.video-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: blur(4px);
+}
+/* Video 2 - Products oldalon */
+.video-containerTwo {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  padding-top:70%; 
+}
+
+.blurred-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  clip-path: polygon(25% 0%, 100% 0%, 100% 99%, 0% 100%);
+}
+/* Video 3 - Services oldalon */
+
+.Topvideo {
+  position: relative;
+  height: 50vh; /* Adjust this value to change the overall height of the video */
+  min-height: 10rem;
+  width: 100%;
+  overflow: hidden;
+}
+
+.Topvideo video {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  width: 100%; /* Adjust this value to change the width of the video */
+  height: auto;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+}
+
+.Topvideo .container {
+  position: relative;
+  z-index: 1;
+}
+
+.Topvideo .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.5;
+  z-index: 1;
+}
+
+/* ------------- Video Settings ends here ------------ */
+
+
 
 /* Általános stílusok */
 body {
@@ -147,75 +238,6 @@ section {
     }
 }
 
-/* Video rész az "about us" oldalon */
-.home {
-    /* A "home" rész stílusa */
-    height: 100vh;
-    position: relative;
-}
-.showcase-img {
-    background-size: cover;
-    background-position: center;
-    height: 350px; /* Változtasd meg a megfelelő magasságra */
-  }
-  .showcase-text {
-    text-align: center;
-  }
-
-.video-container {
-    /* A videó konténer stílusa */
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.video-container video {
-    /* A videó stílusa */
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(4px);
-    /* Itt állíthatod be a kívánt blur értéket (px-ben) */
-}
-
-
-.recipe-card {
-  max-width: 400px;
-  max-height: 400px;
-  margin-bottom: 20px;
-}
-
-.recipe-card img {
-  max-width: 400px;
-  max-height: 400px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 5;
-  margin-bottom: 20px;
-
-}
-
-
-.video-containerTwo {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  padding-top:70%; /* Adjust this value based on the image's aspect ratio */
-}
-
-.blurred-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  clip-path: polygon(25% 0%, 100% 0%, 100% 99%, 0% 100%);
-}
-
 /* A "home" tartalom rész stílusa */
 .home-content {
     position: relative;
@@ -241,50 +263,6 @@ h1 {
     text-align: center;
 }
 
-
-/* -------- products page ---------*/
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    /* Add space between cards */
-
-}
-
-.card {
-    width: 18rem;
-    margin-bottom: 10rem;
-    /* Add some margin between cards */
-}
-
-.card-body {
-    flex-grow: 1;
-    overflow: hidden;
-    /* Prevent text overflow */
-}
-
-.card-img {
-    width: 100%;
-    height: 200px;
-    padding-top: 56.25%;
-    /* 16:9 aspect ratio */
-    background-size: cover;
-}
-
-/* -------- ProductCarousel ---------*/
-#ProductCarousel {
-    background: rgba(255, 255, 255, 0.5);
-    /* Átlátszó fehér háttér példa */
-    margin: auto;
-    /* Középre igazítás */
-}
-
-#ProductCarousel .carousel-inner img {
-    object-fit: cover;
-    height: 600px;
-    width: 100%;
-}
-
 /* ------- btn to scroll up -------*/
 .arrow-up {
     font-size: 20px; /* Adjust the arrow size */
@@ -293,6 +271,7 @@ h1 {
     cursor: pointer;
  }
  
+/* ------------- Cart Settings start here ------------ */
 
 .cart-container {
     background: #f8f9fa;
@@ -347,298 +326,6 @@ h1 {
 .cart-container:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
+/* ------------- cart settings ends here ------------ */
 
 
-/* Page 3 Settings rn. */
-/* Alapstílusok */
-.unique-page body, .unique-page html {
-    height: 100%;
-    margin: 0;
-}
-
-/* Konténer */
-.unique-page .container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    background: #f5f5f5;
-    box-shadow: 0 30px 50px #dbdbdb;
-    overflow: hidden;
-}
-
-/* Diavetítés elemek */
-.unique-page .container .slide .item {
-    width: 200px;
-    height: 300px;
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    border-radius: 20px;
-    box-shadow: 0 30px 50px #505050;
-    background-position: 50% 50%;
-    background-size: cover;
-    display: inline-block;
-    transition: 0.5s;
-}
-
-/* Első két diavetítés elem */
-.unique-page .slide .item:nth-child(1),
-.unique-page .slide .item:nth-child(2) {
-    top: 0;
-    left: 0;
-    transform: translate(0, 0);
-    border-radius: 0;
-    width: 100%;
-    height: 100%;
-}
-
-/* Harmadik diavetítés elem */
-.unique-page .slide .item:nth-child(3) {
-    left: 50%;
-}
-
-/* Negyedik diavetítés elem */
-.unique-page .slide .item:nth-child(4) {
-    left: calc(50% + 220px);
-}
-
-/* Ötödik diavetítés elem */
-.unique-page .slide .item:nth-child(5) {
-    left: calc(50% + 440px);
-}
-
-/* Hatodik diavetítés elem és továbbiak */
-.unique-page .slide .item:nth-child(n + 6) {
-    left: calc(50% + 660px);
-    opacity: 0;
-}
-
-/* Tartalom */
-.unique-page .item .content {
-    position: absolute;
-    top: 50%;
-    left: 100px;
-    width: 300px;
-    text-align: left;
-    color: #eee;
-    transform: translate(0, -50%);
-    font-family: system-ui;
-    display: none;
-    backdrop-filter: blur(20px);
-    border-radius: 10px;
-}
-
-/* Második diavetítés elem tartalma */
-.unique-page .slide .item:nth-child(2) .content {
-    display: block;
-}
-
-/* Tartalom animáció */
-.unique-page .content .name,
-.unique-page .content .des,
-.unique-page .content button {
-    opacity: 0;
-    animation: animate 1s ease-in-out forwards;
-}
-
-/* Kulcsanimáció */
-@keyframes animate {
-    from {
-        opacity: 0;
-        transform: translate(0, 100px);
-        filter: blur(33px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translate(0);
-        filter: blur(0);
-    }
-}
-
-/* Gomb stílusok */
-.unique-page .button {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    bottom: 20px;
-}
-
-.unique-page .button button {
-    width: 40px;
-    height: 35px;
-    border-radius: 8px;
-    border: none;
-    cursor: pointer;
-    margin: 0 5px;
-    border: 1px solid #000;
-    transition: 0.3s;
-}
-
-/* Gomb hover állapot */
-.unique-page .button button:hover {
-    background: #ababab;
-    color: #fff;
-}
-
-
-/* Subscribe part recipe card settings */
-.cols {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-
-
-.col {
-  width: calc(25% - 2rem);
-  margin: 1rem;
-  cursor: pointer;
-}
-
-.container {
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-
-.front,
-.back {
-  background-size: cover;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  background-position: center;
-  -webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  -o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  text-align: center;
-  min-height: 280px;
-  height: auto;
-  border-radius: 10px;
-  color: #fff;
-  font-size: 1rem small;
-}
-
-.back {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-.inner {
-  -webkit-transform: translateY(-50%) translateZ(60px) scale(0.94);
-  transform: translateY(-50%) translateZ(60px) scale(0.94);
-  top: 50%;
-  position: absolute;
-  left: 0;
-  width: 100%;
-  padding: 2rem;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  outline: 1px solid transparent;
-  -webkit-perspective: inherit;
-  perspective: inherit;
-  z-index: 2;
-}
-
-.recipe-card .container .front {
-    -webkit-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-  }
-  
-  .recipe-card .container .back {
-    -webkit-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
-    color: black; /* Vagy a megfelelő szín */
-    background-color: white; /* vagy a háttér színének megfelelő szín */
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .recipe-inner {
-  white-space: pre-line;
-}
-
-
-.recipe-card .container:hover .front {
-    /* A .container:hover .front szabályok továbbra is csak a kártyára alkalmazódnak */
-    -webkit-transform: rotateY(-180deg);
-            transform: rotateY(-180deg);
-    -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-  }
-  
-  .recipe-card .container:hover .back {
-    /* A .container:hover .back szabályok továbbra is csak a kártyára alkalmazódnak */
-    -webkit-transform: rotateY(0deg);
-            transform: rotateY(0deg);
-    -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-  }
-  .recipe-card .container .inner {
-    backdrop-filter: blur(20px);
-	border-radius: 5px;
-  }
-  
-  .recipe-card .container:hover .inner {
-    background-color: rgba(0, 0, 0, 0); /* Amikor megfordul a kártya, az átlátszó háttér jelenik meg */
-  }
-  
-.front .inner p {
-  font-size: 2rem;
-  margin-bottom: 2rem;
-  position: relative;
-}
-
-.front .inner p:after {
-  content: '';
-  width: 4rem;
-  height: 2px;
-  position: absolute;
-  background: #C6D4DF;
-  display: block;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  bottom: -.75rem;
-}
-
-.front .inner span {
-  color: rgba(255, 255, 255, 0.7);
-  font-family: 'Montserrat';
-  font-weight: 300;
-}
-
-@media screen and (max-width: 64rem) {
-  .col {
-    width: calc(33.333333% - 2rem);
-  }
-}
-
-@media screen and (max-width: 48rem) {
-  .col {
-    width: calc(50% - 2rem);
-  }
-}
-
-@media screen and (max-width: 32rem) {
-  .col {
-    width: 100%;
-    margin: 0 0 2rem 0;
-  }
-}
-}
