--- a/css/app.css
+++ b/css/app.css
@@ -3,6 +3,10 @@
 /* -------------Landing Page Animation------------ */
 header {min-height: 60px;}
 footer {min-height: 90px;}
+.page-container.login,
+.page-container.password_frogot {
+  background-color: #c82333;
+}
 
 .slider {
 	animation-duration: 20s;
