--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@ header {min-height: 60px;}
 footer {min-height: 90px;}
 .page-container.login,
 .page-container.password_frogot {
-  background-color: #c82333;
+  background: ;
 }
 
 .slider {
